--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/styles.min.css" />
     <title>Frontend Mentor | Testimonials Grid Section</title>
   </head>
   <body>
     <main class="testimonials">
-      <h1>Student Testimonials</h1>
+      <h1 class="testimonials__title">Student Testimonials</h1>
       <section class="testimonials__grid">
-        <article class="testimonials__student">
+        <article class="testimonials__student testimonials__daniel">
           <h2 class="testimonials__name">Daniel Clifford</h2>
           <p class="testimonials__verified">Verified Graduate</p>
           <h3 class="testimonials__heading">
@@ -35,7 +39,7 @@
             as a Software Engineer at a VR startup. ”
           </p>
         </article>
-        <article class="testimonials__student">
+        <article class="testimonials__student testimonials__jonathan">
           <h2 class="testimonials__name">Jonathan Walters</h2>
           <p class="testimonials__verified">Verified Graduate</p>
           <h3 class="testimonials__heading">
@@ -47,7 +51,7 @@
             best investments I’ve made in myself. ”
           </p>
         </article>
-        <article class="testimonials__student">
+        <article class="testimonials__student testimonials__jeanette">
           <h2 class="testimonials__name">Jeanette Harmon</h2>
           <p class="testimonials__verified">Verified Graduate</p>
           <h3 class="testimonials__heading">
@@ -58,7 +62,7 @@
             enjoy, and make a good living while doing something I love. ”
           </p>
         </article>
-        <article class="testimonials__student">
+        <article class="testimonials__student testimonials__patrick">
           <h2 class="testimonials__name">Patrick Abrams</h2>
           <p class="testimonials__verified">Verified Graduate</p>
           <h3 class="testimonials__heading">
@@ -75,7 +79,7 @@
             and amazing people. ”
           </p>
         </article>
-        <article class="testimonials__student">
+        <article class="testimonials__student testimonials__kira">
           <h2 class="testimonials__name">Kira Whittle</h2>
           <p class="testimonials__verified">Verified Graduate</p>
           <h3 class="testimonials__heading">
