--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             current, if not more so, in the company I joined. I honestly feel I
             got every penny’s worth.
           </h3>
-          <p class="testimonials__text">
+          <p class="testimonials__text testimonials__text--daniel">
             “ I was an EMT for many years before I joined the bootcamp. I’ve
             been looking to make a transition and have heard some people who had
             an amazing experience here. I signed up for the free intro course
@@ -45,7 +45,7 @@
           <h3 class="testimonials__heading">
             The team was very supportive and kept me motivated
           </h3>
-          <p class="testimonials__text">
+          <p class="testimonials__text testimonials__text--jonathan">
             “ I started as a total newbie with virtually no coding skills. I now
             work as a mobile engineer for a big company. This was one of the
             best investments I’ve made in myself. ”
