--- a/index.html
+++ b/index.html
@@ -22,8 +22,28 @@
       <h1 class="testimonials__title">Student Testimonials</h1>
       <section class="testimonials__grid">
         <article class="testimonials__student testimonials__daniel">
+          <img
+            class="testimonials__image testimonials__image--daniel"
+            src="images/image-daniel.jpg"
+            alt="Daniel"
+          />
           <h2 class="testimonials__name">Daniel Clifford</h2>
           <p class="testimonials__verified">Verified Graduate</p>
+          <svg
+            class="testimonials__quotes"
+            width="104"
+            height="102"
+            viewBox="0 0 104 102"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M42 59.7268V102H0V75.7394C0 59.9403 1.48485 47.9042 4.45455 39.6311C7.42424 31.3579 12.0114 23.752 18.2159 16.8132C24.4205 9.87441 32.3485 4.27002 42 0V19.3752C36.9091 22.2575 33.0114 25.8603 30.3068 30.1837C27.6023 34.5071 25.5606 39.044 24.1818 43.7943C22.803 48.5447 22.1136 53.8556 22.1136 59.7268H42ZM104 59.7268V102H62V75.7394C62 59.9403 63.4848 47.9042 66.4545 39.6311C69.4242 31.3579 73.9848 23.752 80.1364 16.8132C86.2879 9.87441 94.2424 4.27002 104 0V19.3752C98.9091 22.2575 95.0114 25.8603 92.3068 30.1837C89.6023 34.5071 87.5606 39.044 86.1818 43.7943C84.803 48.5447 84.1136 53.8556 84.1136 59.7268H104Z"
+              fill="#A775F1"
+            />
+          </svg>
           <h3 class="testimonials__heading">
             I received a job offer mid-course, and the subjects I learned were
             current, if not more so, in the company I joined. I honestly feel I
@@ -40,6 +60,11 @@
           </p>
         </article>
         <article class="testimonials__student testimonials__jonathan">
+          <img
+            class="testimonials__image"
+            src="images/image-jonathan.jpg"
+            alt="Jonathan"
+          />
           <h2 class="testimonials__name">Jonathan Walters</h2>
           <p class="testimonials__verified">Verified Graduate</p>
           <h3 class="testimonials__heading">
@@ -52,26 +77,40 @@
           </p>
         </article>
         <article class="testimonials__student testimonials__jeanette">
-          <h2 class="testimonials__name">Jeanette Harmon</h2>
-          <p class="testimonials__verified">Verified Graduate</p>
-          <h3 class="testimonials__heading">
+          <img
+            class="testimonials__image"
+            src="images/image-jeanette.jpg"
+            alt="Jeanette"
+          />
+          <h2 class="testimonials__name testimonials__name--jeanette">
+            Jeanette Harmon
+          </h2>
+          <p class="testimonials__verified testimonials__verified--jeanette">
+            Verified Graduate
+          </p>
+          <h3 class="testimonials__heading testimonials__heading--jeanette">
             An overall wonderful and rewarding experience
           </h3>
-          <p class="testimonials__text">
+          <p class="testimonials__text testimonials__text--jeanette">
             “ Thank you for the wonderful experience! I now have a job I really
             enjoy, and make a good living while doing something I love. ”
           </p>
         </article>
         <article class="testimonials__student testimonials__patrick">
+          <img
+            class="testimonials__image testimonials__image--patrick"
+            src="images/image-patrick.jpg"
+            alt="Patrick"
+          />
           <h2 class="testimonials__name">Patrick Abrams</h2>
           <p class="testimonials__verified">Verified Graduate</p>
-          <h3 class="testimonials__heading">
+          <h3 class="testimonials__heading testimonials__heading--patrick">
             Awesome teaching support from TAs who did the bootcamp themselves.
             Getting guidance from them and learning from their experiences was
             easy.
           </h3>
-          <p class="testimonials__text">
-            The staff seem genuinely concerned about my progress which I find
+          <p class="testimonials__text testimonials__text--patrick">
+            “ The staff seem genuinely concerned about my progress which I find
             really refreshing. The program gave me the confidence necessary to
             be able to go out in the world and present myself as a capable
             junior developer. The standard is above the rest. You will get the
@@ -80,12 +119,21 @@
           </p>
         </article>
         <article class="testimonials__student testimonials__kira">
-          <h2 class="testimonials__name">Kira Whittle</h2>
-          <p class="testimonials__verified">Verified Graduate</p>
-          <h3 class="testimonials__heading">
+          <img
+            class="testimonials__image"
+            src="images/image-kira.jpg"
+            alt="Kira"
+          />
+          <h2 class="testimonials__name testimonials__name--kira">
+            Kira Whittle
+          </h2>
+          <p class="testimonials__verified testimonials__verified--kira">
+            Verified Graduate
+          </p>
+          <h3 class="testimonials__heading testimonials__heading--kira">
             Such a life-changing experience. Highly recommended!
           </h3>
-          <p class="testimonials__text">
+          <p class="testimonials__text testimonials__text--kira">
             “ Before joining the bootcamp, I’ve never written a line of code. I
             needed some structure from professionals who can help me learn
             programming step by step. I was encouraged to enroll by a former
